--- a/lifestyle_daily.html
+++ b/lifestyle_daily.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary Meta Tags -->
-    <title>Buy Laptops | Hunt-Online</title>
+    <title>Buy Daily Needs | Hunt-Online</title>
     <meta name="title" content="Buy Laptops | Hunt-Online">
     <meta name="description"
         content="Buy Great deals of the day with huge discount and great offers on all of our Amazon Dell, HP, Microsoft, Apple, Vaio and Samsung Laptops.">
@@ -400,8 +400,52 @@
                     <div class="features_items">
                         <!--features_items-->
                         <h2 class="title text-center">Best Ratings</h2>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07H6F9X96&asins=B07H6F9X96&linkId=2b94fe138807ed82f3135c82cb5f0210&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07NHRXGNS&asins=B07NHRXGNS&linkId=d2aa1aec9b8791dffdd5bbf1831d3e5f&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B006LX9VPU&asins=B006LX9VPU&linkId=213eda45c66a98666b50522e2edc000b&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B00791DK28&asins=B00791DK28&linkId=1ffeddb8fb8d5bfa1f39ede3567daa36&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07548J9WC&asins=B07548J9WC&linkId=bf06bf6ef122bcbb9681ec503d11cd1f&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B00JB12W5A&asins=B00JB12W5A&linkId=73370b1910d0fb25d40e4687eb574ad0&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07HS6JRZD&asins=B07HS6JRZD&linkId=cf8954b0ba99755b436cfe62c33b98d5&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07HS3WP4D&asins=B07HS3WP4D&linkId=240a6d2c756ea16c5f2a87ed22f77782&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01ER4TCYE&asins=B01ER4TCYE&linkId=7382a50decd8c9d3e40d2795b162ffd3&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B079QJW5CW&asins=B079QJW5CW&linkId=23987028767d6658e918d6fb88de4c95&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01M9EB7ZK&asins=B01M9EB7ZK&linkId=168a77c5ea20ab1b29eca29d6d1e9611&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07GR5M1VJ&asins=B07GR5M1VJ&linkId=31d5e140e82876c4dc774bec979c4ca2&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
