--- a/tech_headset.html
+++ b/tech_headset.html
@@ -152,7 +152,7 @@
                                                         Decor</a></li>
                                                 <li><a href="lifestyle.html" target="_blank"
                                                         title="lifestyle">Lifestyle</a></li>
-                                                <li><a href="stationery.html" target="_blank">Stationery</a></li>
+                                                <li><a href="stationery.html" target="_blank" title="stationery">Stationery</a></li>
                                                 <li><a href="makeup.html" target="_blank" title="makeup">Makeup</a></li>
 
                                                 <li><a href="#contact" title="contact_us">Contact Us</a>
@@ -402,6 +402,21 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01CLGJ5TW&asins=B01CLGJ5TW&linkId=f342ad031306cea9790dbcc254b374d9&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B086WP5TGR&asins=B086WP5TGR&linkId=51cbef1845e012219b7687668305b3e5&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B084DRKGZ3&asins=B084DRKGZ3&linkId=b5b973fdd89f9ea2a5ca908a59bc3c60&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B01HM2V3KE&asins=B01HM2V3KE&linkId=3eddac535b5205aeb582de90888fbe11&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
                                 <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
                                     scrolling="no" frameborder="0"
                                     src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07L8KNP5F&asins=B07L8KNP5F&linkId=8782320f6a9887b9f80fbe67167bfd63&show_border=true&link_opens_in_new_window=true"></iframe>
@@ -421,9 +436,6 @@
                                     scrolling="no" frameborder="0"
                                     src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07LG59HLT&asins=B07LG59HLT&linkId=65aee36c48b6c461902f6de6e5a489d7&show_border=true&link_opens_in_new_window=true"></iframe>
                             </div>
-
-
-
                         </div>
 
                         <div class="row">
