--- a/technology.html
+++ b/technology.html
@@ -156,7 +156,7 @@
                                                         Decor</a></li>
                                                 <li><a href="lifestyle.html" target="_blank"
                                                         title="lifestyle">Lifestyle</a></li>
-                                                <li><a href="stationery.html" target="_blank">Stationery</a></li>
+                                                <li><a href="stationery.html" target="_blank" title="stationery">Stationery</a></li>
                                                 <li><a href="makeup.html" target="_blank" title="makeup">Makeup</a></li>
 
                                                 <li><a href="#contact" title="contact_us">Contact Us</a>
@@ -432,8 +432,84 @@
                     <div class="features_items">
                         <!--features_items-->
                         <h2 class="title text-center">Best Ratings</h2>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B0844516K1&asins=B0844516K1&linkId=f76745e5939c41683f7d3e1d5dc68909&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B086KFXPFD&asins=B086KFXPFD&linkId=9c1344fbf564a685186d405c21791a47&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07X9YMW7S&asins=B07X9YMW7S&linkId=59fb84fb4ff458a5ea77931b6947b67c&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08444S68Q&asins=B08444S68Q&linkId=a097fbd6aa751cc2a81755ce07e30331&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
 
 
+
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07B4KHXHD&asins=B07B4KHXHD&linkId=1994f1f19b126a76bc0d056a65d622ba&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B014RK94CI&asins=B014RK94CI&linkId=393185cd51018eb5a6850106adb13f76&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B08CHZ3ZQ7&asins=B08CHZ3ZQ7&linkId=d712eac9b14a0b4e21ad5a623c403255&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07K2RHZHY&asins=B07K2RHZHY&linkId=12e6eb2e635501a28044b810388b3479&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B089TFBX6P&asins=B089TFBX6P&linkId=53f466559aed0f5cc2b53e34672e3303&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07Q33B1LF&asins=B07Q33B1LF&linkId=7595d58190a1282f431b9f609dbaffd6&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B0868TH9SD&asins=B0868TH9SD&linkId=83e745d98a78d55f8f7a9c235d186f33&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+                            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
+                                <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0"
+                                    scrolling="no" frameborder="0"
+                                    src="//ws-in.amazon-adsystem.com/widgets/q?ServiceVersion=20070822&OneJS=1&Operation=GetAdHtml&MarketPlace=IN&source=ss&ref=as_ss_li_til&ad_type=product_link&tracking_id=huntonline365-21&language=en_IN&marketplace=amazon&region=IN&placement=B07XRDKDW6&asins=B07XRDKDW6&linkId=19b7b63c50f0d11885946d97dc16fe88&show_border=true&link_opens_in_new_window=true"></iframe>
+                            </div>
+
+
+
+                        </div>
                         <div class="row">
                             <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 resp">
 
